<resources>
    <string name="app_name">Planner</string>
    <string name="welcome">Welcome</string>
    <string name="type_your_note">Type your note</string>
    <string name="please_enter_your_name">Please, enter your name</string>
    <string name="send">Send</string>
    <string name="ADD">ADD</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="cloud">Cloud</string>
    <string name="action_search">Action Search</string>
    <string name="confirm">Confirm</string>
    <string name="create">Create</string>
    <string name="create_new">Create new</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="import_string">Import</string>
    <string name="export_string">Export</string>
    <string name="add_new_note">Add new note</string>
    <string name="edit_note">Edit note</string>
    <string name="account_settings">Account settings</string>
    <string name="tv_welcomeTitle">Hi!\nBefore we start, let\'s create a new account</string>
    <string name="what_to_do_with_notes">"What do you want to do with your notes?"</string>
    <string name="add_new_account">Add new account:</string>
    <string name="create_new_account">Create new account:</string>
    <string name="your_name">Your name:</string>
    <string name="are_your_sure">Are you sure?</string>
    <string name="note_removed">Note removed</string>
    <string name="client_error">You have a request error (%s)</string>
    <string name="server_error">Sorry, but a server have (%s)</string>
    <string name="UNDO">UNDO</string>
    <string name="no_date">no date</string>
    <string name="set_event">Set event</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string name="actionbar_sort_by_date">Sort by date</string>
    <string name="actionbar_sort_by_title">Sort by title</string>
    <string name="search_hint">Search note</string>
    <string name="note_context_share">Share</string>
    <string name="note_context_pin">Pin</string>
    <string name="note_context_delete">Delete</string>
</resources>