<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_menu_spinner"
        android:spinnerMode="dialog"
        android:title="@string/actionbar_spinner"
        app:actionViewClass="androidx.appcompat.widget.AppCompatSpinner"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_menu_search"
        android:icon="@drawable/baseline_search_black_24"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="Search"/>
    <item
        android:id="@+id/toolbar_menu_cloud"
        android:icon="@drawable/baseline_cloud_queue_24"
        android:title="@string/cloud"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_menu_sort_by_date"
        android:icon="@drawable/baseline_sort_black_24"
        android:title="@string/actionbar_sort_by_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_menu_sort_by_title"
        android:icon="@drawable/baseline_sort_black_24"
        android:title="@string/actionbar_sort_by_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_menu_accountSettings"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account_settings"
        app:showAsAction="ifRoom" />
</menu>